update tags swag auth banner
